# kodi-dev-kit

./: .gitignore  CMakeLists.txt
cmake/modules/: FindCrossGUID.cmake
docs/: npm.md
doxygen/: Doxyfile.in
include/kodi/: AddonBase.h  definitions.h
src/: Addon.cpp  Addon.h  AddonBase.cpp  CMakeLists.txt  IAddonInterface.h  SharedMemory.cpp  SharedMemory.h  SharedMemoryPosix.cpp  SharedMemoryPosix.h  kodi.cpp  kodi.h  kodidevkit.i  kodidevkit.pc.cmake  tools.cpp  tools.h
src/java/: CMakeLists.txt  kodijava.i  kodijava.pc.cmake  manifest.txt.in  pom.xml.in
src/javascript/: CMakeLists.txt  binding.gyp.cmake  kodidevkitjs.i  package.json.cmake
src/lua/: CMakeLists.txt  kodidevkitlua.i
src/python/: CMakeLists.txt  kodidevkitpython.i
src/python/python2/: CMakeLists.txt  kodidevkit2.i
src/python/python3/: CMakeLists.txt  kodidevkit3.i
tests/: CMakeLists.txt
tests/c++/: CMakeLists.txt  main.cpp
tests/java/: interface_test.java
tests/javascript/: interface-test.js
tests/lua/: interface-test.lua
tests/python2/: interface-test.py
tests/python3/: interface-test.py
tests/testserver/: CMakeLists.txt  main.cpp  system.h
tests/testserver/addons/: IAddon.h
tests/testserver/addons/binary/: BinaryAddon.cpp  BinaryAddon.h  BinaryAddonManager.cpp  BinaryAddonManager.h  IAddonInterface.h  tools.h
tests/testserver/addons/binary/intfc-shared/: SharedMemory.cpp  SharedMemory.h  SharedMemoryPosix.cpp  SharedMemoryPosix.h
tests/testserver/linux/: XTimeUtils.h
tests/testserver/network/: Network.cpp  Network.h  Socket.h
tests/testserver/threads/: CriticalSection.h  SingleLock.h  Thread.h
tests/testserver/utils/: JobManager.cpp  JobManager.h  StringUtils.h  log.cpp  log.h
